tests/ui/rfcs/rfc-2632-const-trait-impl/effects/project.stderr
error[E0277]: the trait bound `Self: Uwu` is not satisfied
  --> $DIR/project.rs:12:1
   |
LL | pub trait Uwu: Owo {
   | ^^^^^^^^^^^^^^^^^^ the trait `Uwu` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | pub trait Uwu: Owo + Uwu {
   |                    +++++

error[E0277]: the trait bound `Self: Uwu` is not satisfied
  --> $DIR/project.rs:12:1
   |
LL | / pub trait Uwu: Owo {
LL | |     type T;
LL | | }
   | |_^ the trait `Uwu` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | pub trait Uwu: Owo + Uwu {
   |                    +++++

error[E0277]: the trait bound `Self: Uwu` is not satisfied
  --> $DIR/project.rs:13:5
   |
LL |     type T;
   |     ^^^^^^ the trait `Uwu` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | pub trait Uwu: Owo + Uwu {
   |                    +++++

error[E0277]: the trait bound `Self: Uwu` is not satisfied
  --> $DIR/project.rs:13:5
   |
LL |     type T;
   |     ^^^^^^^ the trait `Uwu` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | pub trait Uwu: Owo + Uwu {
   |                    +++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
